@@ -2,6 +2,8 @@
 
 	* client-src/killpgrp.c: clean up minor compiler warnings by not
 	building term_kill_{soft,hard} unless they are needed.
+	* server-src/driverio.c (dumper_cmd): clean up compiler warning
+	in printf format by forcing argument to always be long and using %ld.
 
 1998-06-01  Dan Swartzendruber  <dswartz@druber.com> via John R. Jackson
 
